# BiasGuard

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROPOSAL.md  README.md  TECHNICAL_SPEC.md  pyproject.toml
SECURITY.md/: security.md
src/biasguard/: cli.py  metrics.py
tests/: test_metrics.py
