[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biasguard"
version = "0.1.0"
description = "BiasGuard: Automated bias detection & mitigation toolkit for AI hiring systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
biasguard = "biasguard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
